--- a/chat/index.html
+++ b/chat/index.html
@@ -1,11 +1,11 @@
+<!DOCTYPE html>
+<html itemscope itemtype="http://schema.org/SoftwareApplication">
 <!--A Design by W3layouts
 Author: W3layout
 Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 -->
-<!DOCTYPE HTML>
-<html>
 <head>
 <title>Greyhole - Redundant Storage Pooling using Samba</title>
 <link href="/css/style.css" rel="stylesheet" type="text/css" media="all" />
@@ -14,15 +14,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <link rel="icon" href="http://www.greyhole.net/favicon.ico" type="image/x-icon" />
 <link rel="shortcut icon" href="http://www.greyhole.net/favicon.ico" type="image/x-icon" />
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-<script src="/js/jquery.min.js"></script>
-<script type="text/javascript">
-jQuery(document).ready(function($) {
-    $(".scroll").click(function(event){		
-        event.preventDefault();
-        $('html,body').animate({scrollTop:$(this.hash).offset().top}, 700);
-    });
-});
-</script>
 </head>
 <body>
 <div class="header">	
@@ -37,26 +28,31 @@ jQuery(document).ready(function($) {
 		 <div class="wrap">
 		   	  <h1>Live Chat</h1>
               <div class="clear"></div>
-		   	  <p class="desc">If you'd like to see if others already asked what you are about to ask, or to read a response you might have missed, you can access the logs of past IRC chats <a href="http://www.greyhole.net/irc/" rel="self">here</a>.</p>
-              <iframe name=target src="http://webchat.freenode.net?channels=greyhole&uio=OT10cnVlJjEwPXRydWU3a" width="100%" height="500" frameborder="0" scrolling="auto"></iframe>
+		   	  <p class="desc">If you'd like to see if others already asked what you are about to ask, or to read a response you might have missed, you can access the logs of past IRC chats <a href="http://www.greyhole.net/irc/">here</a>.</p>
+              <iframe name=target src="http://webchat.freenode.net?channels=greyhole&amp;uio=OT10cnVlJjEwPXRydWU3a" style="width: 100%; height: 500px"></iframe>
          </div>
      </div>
-  </div>
 </div>
-
 <!-- Start Google Analytics -->
 <script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-79918-24']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script><!-- End Google Analytics -->
+var _gaq = _gaq || [];
+_gaq.push(['_setAccount', 'UA-79918-24']);
+_gaq.push(['_trackPageview']);
+(function() {
+var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+})();
+</script>
+<!-- End Google Analytics -->
+<script type="text/javascript" src="/js/jquery.min.js"></script>
+<script type="text/javascript">
+    jQuery(document).ready(function($) {
+        $(".scroll").click(function(event){
+            event.preventDefault();
+            $('html,body').animate({scrollTop:$(this.hash).offset().top}, 700);
+        });
+    });
+</script>
 </body>
 </html>
