--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <h1>Features</h1>
             <div class="section group">
                 <div class="grid_1_of_3 images_1_of_3">
-                    <!-- <a href="images/t-pic.jpg" class="swipebox" title="Image Title"> <img src="images/pic.jpg" alt=""><span class="zoom-icon"></span> </a> -->
                     <div class="support-desc">
                         <h4>JBOD concatenation storage pool</h4>
                         <p>Configure <span>as many hard drives as you'd like</span> to be included in your pool.
@@ -62,7 +61,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     </div>
                 </div>
                 <div class="grid_1_of_3 images_1_of_3">
-                    <!-- <a href="images/t-pic1.jpg" class="swipebox" title="Image Title"> <img src="images/pic1.jpg" alt=""><span class="zoom-icon"></span> </a> -->
                     <div class="support-desc">
                         <h4>Per-share redundancy</h4>
                         <p>For each of your shares that use the space of your storage pool,
@@ -73,13 +71,46 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     </div>
                 </div>
                 <div class="grid_1_of_3 images_1_of_3">
-                    <!-- <a href="images/t-pic2.jpg" class="swipebox" title="Image Title"> <img src="images/pic2.jpg" alt=""><span class="zoom-icon"></span> </a> -->
                     <div class="support-desc">
                         <h4>Easy migrations</h4>
                         <p>Greyhole file copies are <span>regular files</span>, visible on any machine, <span>without any hardware or software required</span>.
                             If you take out one hard drive from your pool, and mount it anywhere else,
                             you’ll be able to see all the files that Greyhole stored on it.
                             They will have the same filenames, and they’ll be in the same directories you’d expect them to be.</p>
+                    </div>
+                </div>
+                <div class="clear"></div>
+            </div>
+
+            <br/><br/>
+            <h1>Non Features</h1>
+            <div class="section group">
+                <div class="grid_1_of_3 images_1_of_3">
+                    <div class="support-desc">
+                        <div>Greyhole is not...</div>
+                        <h4>A replacement for remote backups</h4>
+                        <p>You should always have a backup strategy that includes <span>remote</span> copies of your files. Those backups should not disappear if someone, or something, deletes them from your computer. Greyhole will delete all your file copies if a file is deleted from your shares, and thus isn't a good backup against user-errors.</p>
+                    </div>
+                </div>
+                <div class="grid_1_of_3 images_1_of_3">
+                    <div class="support-desc">
+                        <div>Greyhole is not...</div>
+                        <h4>A replacement for RAID-0</h4>
+                        <p>
+                            While Greyhole tries hard to keep your files available, if a drive dies, some files could <span>disappear momentarily</span> from your shares, until Greyhole has time to find the extra copies needed to make them re-appear (if you configured enough file copies).
+                            <a href="https://github.com/gboudreau/Greyhole/wiki/WhatNotToPutInGreyholeShares" target="_blank">Details</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="grid_1_of_3 images_1_of_3">
+                    <div class="support-desc">
+                        <div>Greyhole is not...</div>
+                        <h4>Happy with a lot of small files, or often-changing files</h4>
+                        <p>
+                            Using Greyhole to store <span>a lot of small files</span> is not-a-good-idea&trade;.<br/>
+                            Similarly, storing <span>files that change often</span>, especially large files, is asking for trouble. i.e. don't use a Greyhole share for your currently-downloading torrents, and zip folders with a large number of files, if you can. Greyhole, and subsequently you, will be happier from it.
+                            <a href="https://github.com/gboudreau/Greyhole/wiki/WhatNotToPutInGreyholeShares" target="_blank">Details</a>
+                        </p>
                     </div>
                 </div>
                 <div class="clear"></div>
