--- a/index.html
+++ b/index.html
@@ -125,16 +125,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
             <h2>Step 1</h2>
 
-            <h3>Using <span>APT</span> (Ubuntu, Debian)</h3>
-             <pre style="max-width: 790px"><span class="command">sudo sh</span> -c 'echo "deb <span class="url">http://www.greyhole.net/releases/deb</span> stable main" > <span class="filename">/etc/apt/sources.list.d/greyhole.list</span>'
-<span class="command">curl</span> -s <span class="url">http://www.greyhole.net/releases/deb/greyhole-debsig.asc</span> | <span class="command">sudo apt-key</span> add -
-<span class="command">sudo apt-get</span> update
-<span class="command">sudo apt-get</span> install greyhole</pre>
-            <br/>
-
-            <h3>Using <span>Yum</span> (CentOS, Fedora, RHEL)</h3>
-             <pre style="max-width: 660px"><span class="command">sudo curl</span> -o <span class="filename">/etc/yum.repos.d/greyhole.repo</span> <span class="url">http://www.greyhole.net/releases/rpm/greyhole.repo</span>
-<span class="command">sudo yum</span> install greyhole</pre>
+            <h3>Using <span>APT</span> (Ubuntu, Debian) or <span>Yum</span> (CentOS, Fedora, RHEL)</h3>
+             <pre style="text-align: center; max-width: 790px"><span class="command">curl -Ls</span> <span class="url">http://bit.ly/gh-install-package</span> | <span class="code">sudo sh</span></pre>
             <br/>
 
             <h3>Manually</h3>
