greyhole.net is now IPv6-accessible - added badge

--- a/index.html
+++ b/index.html
@@ -195,7 +195,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <div class="copy">
             <p class="copy">
                 © 2011-2014 <span itemscope itemtype="http://schema.org/Person"><a href="http://about.me/guillaume.boudreau?rel=author" target="_blank" itemprop="url"><span itemprop="name">Guillaume Boudreau</span></a></span><br/>
-                © 2013 Website design by <a href="http://w3layouts.com" target="_blank">w3layouts</a></p>
+                © 2013 Website design by <a href="http://w3layouts.com" target="_blank">w3layouts</a>
+            </p>
+            <p>
+                <!-- IPv6-test.com button BEGIN -->
+                <a target='_blank' href='http://cloudflare.ipv6-test.com/validate.php?url=www.greyhole.net'><img src='//ajax.cloudflare.com/cdn-cgi/custom/images/button-ipv6-small.png' alt='ipv6 ready' title='ipv6 ready' border='0' /></a>
+                <!-- IPv6-test.com button END -->
+            </p>
         </div>
         <div class="clear"></div>
     </div>
