http>https and typo (RAID-0/1)

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <link rel="icon" href="http://www.greyhole.net/favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="http://www.greyhole.net/favicon.ico" type="image/x-icon" />
-    <link href="http://www.greyhole.net/rss/" rel="alternate" title="Greyhole Blog" type="application/atom+xml" />
-    <link href="http://www.greyhole.net/rss/downloads/" rel="alternate" title="Greyhole Releases" type="application/atom+xml" />
-    <link href="http://www.greyhole.net/rss/commits/" rel="alternate" title="Greyhole Commits" type="application/atom+xml" />
+    <link href="https://www.greyhole.net/rss/" rel="alternate" title="Greyhole Blog" type="application/atom+xml" />
+    <link href="https://www.greyhole.net/rss/downloads/" rel="alternate" title="Greyhole Releases" type="application/atom+xml" />
+    <link href="https://www.greyhole.net/rss/commits/" rel="alternate" title="Greyhole Commits" type="application/atom+xml" />
     <link href="css/style.css?a=1" rel="stylesheet" type="text/css" media="all" />
-    <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css' />
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css' />
     <link href="https://plus.google.com/116455304664644891067/" rel="publisher" />
 </head>
 <body>
@@ -95,7 +95,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="grid_1_of_3 images_1_of_3">
                     <div class="support-desc">
                         <div>Greyhole is not...</div>
-                        <h4>A replacement for RAID-0</h4>
+                        <h4>A replacement for RAID-1</h4>
                         <p>
                             While Greyhole tries hard to keep your files available, if a drive dies, some files could <span>disappear momentarily</span> from your shares, until Greyhole has time to find the extra copies needed to make them re-appear (if you configured enough file copies).
                             <a href="https://github.com/gboudreau/Greyhole/wiki/WhatNotToPutInGreyholeShares" target="_blank">Details</a>
@@ -160,8 +160,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <div class="bullets">
                 <p class="desc"><a href="#doc" class="scroll">RTFM</a></p>
                 <p class="desc"><a href="http://www.greyhole.net/irc/">Live chat logs</a> - search here to see if your questions was answered already.</p>
-                <p class="desc"><a href="http://www.greyhole.net/chat/">Live chat</a> #greyhole on FreeNode</p>
-                <p class="desc"><a href="http://getsatisfaction.com/greyhole">Forum</a> on GetSatisfaction</p>
+                <p class="desc"><a href="http://www.greyhole.net/chat/">Live chat</a> #greyhole on Freenode</p>
+                <p class="desc"><a href="https://greyhole.freshdesk.com">Support & Forum</a> on FreshDesk</p>
             </div>
         </div>
     </div>
