Use HTTPS for all resources

--- a/chat/index.html
+++ b/chat/index.html
@@ -11,9 +11,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <link href="/css/style.css" rel="stylesheet" type="text/css" media="all" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link rel="icon" href="http://www.greyhole.net/favicon.ico" type="image/x-icon" />
-<link rel="shortcut icon" href="http://www.greyhole.net/favicon.ico" type="image/x-icon" />
-<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+<link rel="icon" href="https://www.greyhole.net/favicon.ico" type="image/x-icon" />
+<link rel="shortcut icon" href="https://www.greyhole.net/favicon.ico" type="image/x-icon" />
+<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <div class="header">	
@@ -29,7 +29,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		   	  <h1>Live Chat</h1>
               <div class="clear"></div>
 		   	  <p class="desc">If you'd like to see if others already asked what you are about to ask, or to read a response you might have missed, you can access the logs of past IRC chats <a href="http://www.greyhole.net/irc/">here</a>.</p>
-              <iframe name=target src="http://webchat.freenode.net?channels=greyhole&amp;uio=OT10cnVlJjEwPXRydWU3a" style="width: 100%; height: 500px"></iframe>
+              <iframe name=target src="https://webchat.freenode.net?channels=greyhole&amp;uio=OT10cnVlJjEwPXRydWU3a" style="width: 100%; height: 500px"></iframe>
          </div>
      </div>
 </div>
