--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Greyhole - Redundant Storage Pooling using Samba</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <link rel="icon" href="http://www.greyhole.net/favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="http://www.greyhole.net/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="https://www.greyhole.net/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="https://www.greyhole.net/favicon.ico" type="image/x-icon" />
     <link href="https://www.greyhole.net/rss/" rel="alternate" title="Greyhole Blog" type="application/atom+xml" />
     <link href="https://www.greyhole.net/rss/downloads/" rel="alternate" title="Greyhole Releases" type="application/atom+xml" />
     <link href="https://www.greyhole.net/rss/commits/" rel="alternate" title="Greyhole Commits" type="application/atom+xml" />
@@ -24,7 +24,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <div class="header-top">
         <div class="wrap">
             <div class="logo">
-                <a href="http://www.greyhole.net" itemprop="url"><img itemprop="image" src="images/greyhole-logo-small.png" alt="Greyhole logo" /><span itemprop="name">Greyhole</span></a>
+                <a href="https://www.greyhole.net" itemprop="url"><img itemprop="image" src="images/greyhole-logo-small.png" alt="Greyhole logo" /><span itemprop="name">Greyhole</span></a>
             </div>
             <span class="desc" itemprop="description">Easily expandable and redundant storage pool for home servers</span>
             <div class="cssmenu">
@@ -159,8 +159,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <h1>Support</h1>
             <div class="bullets">
                 <p class="desc"><a href="#doc" class="scroll">RTFM</a></p>
-                <p class="desc"><a href="http://www.greyhole.net/irc/">Live chat logs</a> - search here to see if your questions was answered already.</p>
-                <p class="desc"><a href="http://www.greyhole.net/chat/">Live chat</a> #greyhole on Freenode</p>
+                <p class="desc"><a href="https://www.greyhole.net/irc/">Live chat logs</a> - search here to see if your questions was answered already.</p>
+                <p class="desc"><a href="https://www.greyhole.net/chat/">Live chat</a> #greyhole on Freenode</p>
                 <p class="desc"><a href="https://greyhole.freshdesk.com">Support & Forum</a> on FreshDesk</p>
             </div>
         </div>
