Removed IRC links from website
Easier on me if users use other support channels to contact me…

--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <h1>Support</h1>
             <div class="bullets">
                 <p class="desc"><a href="#doc" class="scroll">RTFM</a></p>
-                <p class="desc"><a href="https://www.greyhole.net/irc/">Live chat logs</a> - search here to see if your questions was answered already.</p>
-                <p class="desc"><a href="https://www.greyhole.net/chat/">Live chat</a> #greyhole on Freenode</p>
-                <p class="desc"><a href="https://greyhole.freshdesk.com">Support & Forum</a> on FreshDesk</p>
+                <!--p class="desc"><a href="https://www.greyhole.net/irc/">Live chat logs</a> - search here to see if your questions was answered already.</p-->
+                <!--p class="desc"><a href="https://www.greyhole.net/chat/">Live chat</a> #greyhole on Freenode</p-->
+                <p class="desc"><a href="https://greyhole.freshdesk.com">Support</a> on FreshDesk</p>
             </div>
         </div>
     </div>
