Use bash instead of sh to install Greyhole

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <h2>Step 1</h2>
 
             <h3>Using <span>APT</span> (Ubuntu, Debian) or <span>Yum</span> (CentOS, Fedora, RHEL)</h3>
-             <pre style="text-align: center; max-width: 790px"><span class="command">curl -Ls</span> <span class="url">http://bit.ly/gh-install-package</span> | <span class="code">sudo sh</span></pre>
+             <pre style="text-align: center; max-width: 790px"><span class="command">curl -Ls</span> <span class="url">http://bit.ly/gh-install-package</span> | <span class="code">sudo bash</span></pre>
             <br/>
 
             <h3>Manually</h3>
