Updates to RSS feeds

--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <link rel="icon" href="https://www.greyhole.net/favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="https://www.greyhole.net/favicon.ico" type="image/x-icon" />
-    <link href="https://www.greyhole.net/rss/" rel="alternate" title="Greyhole Blog" type="application/atom+xml" />
-    <link href="https://www.greyhole.net/rss/downloads/" rel="alternate" title="Greyhole Releases" type="application/atom+xml" />
-    <link href="https://www.greyhole.net/rss/commits/" rel="alternate" title="Greyhole Commits" type="application/atom+xml" />
+    <link href="/rss/downloads/" rel="alternate" title="Greyhole Releases" type="application/atom+xml" />
+    <link href="/rss/commits/" rel="alternate" title="Greyhole Commits" type="application/atom+xml" />
     <link href="css/style.css?a=1" rel="stylesheet" type="text/css" media="all" />
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css' />
     <link href="https://plus.google.com/116455304664644891067/" rel="publisher" />
