Clarified issue with a lot of small files.

--- a/index.html
+++ b/index.html
@@ -106,8 +106,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <div>Greyhole is not...</div>
                         <h4>Happy with a lot of small files, or often-changing files</h4>
                         <p>
-                            Using Greyhole to store <span>a lot of small files</span> is not-a-good-idea&trade;.<br/>
-                            Similarly, storing <span>files that change often</span>, especially large files, is asking for trouble. i.e. don't use a Greyhole share for your currently-downloading torrents, and zip folders with a large number of files, if you can. Greyhole, and subsequently you, will be happier from it.
+                            Using Greyhole to store <span>a lot of small files</span> (a few kB each) is not-a-good-idea&trade;. If possible, compress into a single archive the small files you have that you don't access often.<br/>
+                            Similarly, storing <span>files that change often</span>, especially large files, is asking for trouble. i.e. don't use a Greyhole share for your currently-downloading torrents.<br/>
+                            Greyhole, and subsequently you, will be happier from it.
                             <a href="https://github.com/gboudreau/Greyhole/wiki/WhatNotToPutInGreyholeShares" target="_blank">Details</a>
                         </p>
                     </div>
