Use HTTPS in bit.ly link
Fixes #173

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html itemscope itemtype="http://schema.org/SoftwareApplication">
 <!--A Design by W3layouts
 Author: W3layout
-Author URL: http://w3layouts.com
+Author URL: https://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
+License URL: https://creativecommons.org/licenses/by/3.0/
 -->
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -126,7 +126,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <h2>Step 1</h2>
 
             <h3>Using <span>APT</span> (Ubuntu, Debian) or <span>Yum</span> (CentOS, Fedora, RHEL)</h3>
-             <pre style="text-align: center; max-width: 790px"><span class="command">curl -Ls</span> <span class="url">http://bit.ly/gh-install-package</span> | <span class="code">sudo bash</span></pre>
+             <pre style="text-align: center; max-width: 790px"><span class="command">curl -Ls</span> <span class="url">https://bit.ly/gh-install-package</span> | <span class="code">sudo bash</span></pre>
             <br/>
 
             <h3>Manually</h3>
@@ -194,8 +194,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         </div> -->
         <div class="copy">
             <p class="copy">
-                © 2011-2014 <span itemscope itemtype="http://schema.org/Person"><a href="http://about.me/guillaume.boudreau?rel=author" target="_blank" itemprop="url"><span itemprop="name">Guillaume Boudreau</span></a></span><br/>
-                © 2013 Website design by <a href="http://w3layouts.com" target="_blank">w3layouts</a>
+                © 2011-2014 <span itemscope itemtype="http://schema.org/Person"><a href="https://about.me/guillaume.boudreau?rel=author" target="_blank" itemprop="url"><span itemprop="name">Guillaume Boudreau</span></a></span><br/>
+                © 2013 Website design by <a href="https://w3layouts.com" target="_blank">w3layouts</a>
             </p>
             <p>
                 <!-- IPv6-test.com button BEGIN -->
