Added wiki and issues links to support section

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ License URL: https://creativecommons.org/licenses/by/3.0/
             <h1>Documentation</h1>
             <div class="bullets">
                 <p class="desc">Greyhole is open-source, and <a href="https://github.com/gboudreau/Greyhole" target="_blank">hosted on Github</a>.</p>
-                <p class="desc">The <a href="https://github.com/gboudreau/Greyhole/wiki" target="_blank">wiki</a> is filled with useful information, tips and recommendations.</p>
+                <p class="desc">The <a href="https://github.com/gboudreau/Greyhole/wiki" target="_blank">wiki on Github</a> is filled with useful information, tips and recommendations.</p>
                 <p class="desc">How to install and configure Greyhole in 10 minutes, a video walkthrough:<br/>
                     <iframe width="420" height="315" src="https://www.youtube.com/embed/uZ5JhxULj8k?rel=0" allowfullscreen></iframe>
                 </p>
@@ -159,6 +159,8 @@ License URL: https://creativecommons.org/licenses/by/3.0/
             <h1>Support</h1>
             <div class="bullets">
                 <p class="desc"><a href="#doc" class="scroll">RTFM</a></p>
+                <p class="desc">The <a href="https://github.com/gboudreau/Greyhole/wiki#get-help-or-resolve-a-problem" target="_blank">wiki on Github</a> is filled with useful information, including a FAQ.</p>
+                <p class="desc">Search the <a href="https://github.com/gboudreau/Greyhole/issues?q=is%3Aissue" target="_blank">Issues on Github</a>, to see if someone else had the same problem in the past,<br/>and what the resolution/workarounds were suggested.</p>
                 <!--p class="desc"><a href="https://www.greyhole.net/irc/">Live chat logs</a> - search here to see if your questions was answered already.</p-->
                 <!--p class="desc"><a href="https://www.greyhole.net/chat/">Live chat</a> #greyhole on Freenode</p-->
                 <p class="desc"><a href="https://greyhole.freshdesk.com">Support</a> on FreshDesk</p>
