Updated website: support links

--- a/index.html
+++ b/index.html
@@ -161,10 +161,11 @@ License URL: https://creativecommons.org/licenses/by/3.0/
             <div class="bullets">
                 <p class="desc"><a href="#doc" class="scroll">RTFM</a></p>
                 <p class="desc">The <a href="https://github.com/gboudreau/Greyhole/wiki#get-help-or-resolve-a-problem" target="_blank">wiki on Github</a> is filled with useful information, including a FAQ.</p>
-                <p class="desc">Search the <a href="https://github.com/gboudreau/Greyhole/issues?q=is%3Aissue" target="_blank">Issues on Github</a>, to see if someone else had the same problem in the past,<br/>and what the resolution/workarounds were suggested.</p>
+                <p class="desc">Search the <a href="https://github.com/gboudreau/Greyhole/issues?q=is%3Aissue" target="_blank">Issues on Github</a>, and the <a href="https://github.com/gboudreau/Greyhole/discussions" target="_blank">Discussions on Github</a>, to see if someone else had the same problem in the past,<br/>and what the resolution/workarounds were suggested.</p>
+                <p class="desc">Create a new <a href="https://github.com/gboudreau/Greyhole/discussions" target="_blank">Discussion on Github</a> or <a href="https://github.com/gboudreau/Greyhole/issues" target="_blank">Issue on Github</a>.</p>
                 <!--p class="desc"><a href="https://www.greyhole.net/irc/">Live chat logs</a> - search here to see if your questions was answered already.</p-->
                 <!--p class="desc"><a href="https://www.greyhole.net/chat/">Live chat</a> #greyhole on Freenode</p-->
-                <p class="desc"><a href="https://greyhole.freshdesk.com" target="_blank">Support</a> on FreshDesk</p>
+                <!--p class="desc"><a href="https://greyhole.freshdesk.com" target="_blank">Support</a> on FreshDesk</p-->
             </div>
         </div>
     </div>
@@ -186,15 +187,6 @@ License URL: https://creativecommons.org/licenses/by/3.0/
 </div>
 <div class="footer">
     <div class="wrap">
-        <!-- <div class="footer-menu">
-            <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Careers</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Press & Media</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </div> -->
         <div class="copy">
             <p class="copy">
                 © 2011-2014 <span itemscope itemtype="http://schema.org/Person"><a href="https://about.me/guillaume.boudreau?rel=author" target="_blank" itemprop="url"><span itemprop="name">Guillaume Boudreau</span></a></span><br/>
