Updated bitly link to use HTTPS

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ License URL: https://creativecommons.org/licenses/by/3.0/
             <h2>Step 1</h2>
 
             <h3>Using <span>APT</span> (Ubuntu, Debian) or <span>Yum</span> (CentOS, Fedora, RHEL)</h3>
-            <pre style="text-align: center; max-width: 790px"><span class="command">curl -Ls</span> <span class="url">http://bit.ly/greyhole-package</span> | <span class="code">sudo bash</span></pre>
+            <pre style="text-align: center; max-width: 790px"><span class="command">curl -Ls</span> <span class="url">https://bit.ly/greyhole-package</span> | <span class="code">sudo bash</span></pre>
 
             <h3 style="margin-top: 0.7em">Or manually</h3>
             <p class="desc" style="font-size: 1em">Just download the latest .tar.gz file from the <a href="https://github.com/gboudreau/Greyhole/releases" target="_blank">Github Releases page</a>.<br/>
